refactor list post and error messages